Update search, add foundation to page

--- a/app/views/airports/index.html.erb
+++ b/app/views/airports/index.html.erb
@@ -10,9 +10,9 @@
       <th>Country</th>
       <th>Iata</th>
       <th>Icao</th>
-      <th>Latitude deg</th>
-      <th>Longitude deg</th>
-      <th>Altitude feet</th>
+      <th>Latitude</th>
+      <th>Longitude</th>
+      <th>Altitude</th>
       <th>Timezone</th>
       <th>Dst</th>
       <th>Tz database timezone</th>
@@ -28,9 +28,9 @@
         <td><%= airport.country %></td>
         <td><%= airport.iata %></td>
         <td><%= airport.icao %></td>
-        <td><%= airport.latitude_deg %></td>
-        <td><%= airport.longitude_deg %></td>
-        <td><%= airport.altitude_feet %></td>
+        <td><%= airport.latitude %></td>
+        <td><%= airport.longitude %></td>
+        <td><%= airport.altitude %></td>
         <td><%= airport.timezone %></td>
         <td><%= airport.DST %></td>
         <td><%= airport.tz_database_timezone %></td>
