--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -42,7 +42,7 @@
                         
                         <div class='form-col-3 on' id='returning'>
                             <%= label_tag 'returing', 'Returning' %>
-                            <%= date_field_tag(:query_2_date_r, Date.today) %>
+                            <%= date_field_tag(:query_2_date_r, Date.tomorrow) %>
                         </div>
                         <div class='form-col-f'>
                         
@@ -165,6 +165,9 @@
         <div class='section-content-2'>
         <p>
             At tino we know that there are people who love to travel. and that there are people who love their pets. We wanted to create a way for pet owners to travel and not leave thier pets behind. We are dedicated to making this dream come true. 
+        </p><br>
+        <p>
+        Follow Tino on <a href='#'>Facebook</a>, <a href='#'>Twitter</a>, <a href='#'>Instagram</a>, and get travel tips & advice through the Tino Travel Blog.
         </p>
         </div>
     </section>
