change search engine from ruby based code to javascript (reduce requests made from the app to GoogleQPX), add pagination(incomplete)

--- a/app/assets/javascripts/main.js.erb
+++ b/app/assets/javascripts/main.js.erb
@@ -1,3 +1,16 @@
 ///////////////////
 //Flights search JS
 //////////////////
+
+function googleQPXrequest(){
+         $.ajax({
+          type: "POST",
+          url: "/search_googleQPX",
+          data: <%= raw @request.to_json %>,
+          success:(data) ->
+            alert data.id
+            return false
+          error:(data) ->
+            return false
+        })   
+}
